--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "winston": "^3.8.1"
   }
 }
