--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "nodemon index_db.js"
   },
   "author": "",
@@ -19,5 +19,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.5.2",
     "winston": "^3.8.1"
+  },
+  "devDependencies": {
+    "jest": "^29.0.1"
   }
 }
